Test inline css for hovering

--- a/templates/test.html
+++ b/templates/test.html
@@ -1,11 +1,11 @@
 <head>
     <style>
-        svg path:hover {
+        svg#svg2 path:hover {
             fill:blue !important;
         }
-	svg path {
-		fill: red;
-	}
+        svg#svg2 path {
+            fill: red;
+        }
     </style>
     <title>World Map Test</title>
 </head>
