--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,33 +1,28 @@
-rect {
-    background-color: white;
-}
-svg path:hover {
-    fill:blue !important;
-}
-svg path {
-    fill: red;
-}
 svg {
     width: 100%;
     height: 100%;
 }
+svg path:hover {
+    fill: #384d58;
+    filter: drop-shadow(0px 3px 3px rgba(100, 100, 100, 0.4));
+}
 body {
     margin: 0;
-    background-color: #2A2C39;
+    background-color: #0f4c75;
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-weight: 200;
     font-size: 17px;
 }
 #map-holder {
     width: 100%;
-    height: 100%;
+    height: 85%;
 }
 svg rect {
-    fill: #2A2C39;   /* map background colour */
+    fill: #0f4c75;   /* map background colour */
 }
 .country{
-    fill: #d0d0d0;   /* country colour */
-    stroke: #2A2C39; /* country border colour */
+    fill: #1b262c;   /* country colour */
+    stroke: #919191; /* country border colour */
     stroke-width: 1; /* country border width */
 }
 .country-on{
@@ -41,4 +36,58 @@ svg rect {
 }
 .countryLabelBg{
     fill: #30BCED;   /* country label background colour */
+}
+#top-bar {
+    background-color: #1b262c;
+    width: 100%;
+    height: 5%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+#top-bar-items {
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+#top-bar-items .link-button {
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-size: medium;
+    text-decoration: none;
+    background-color: #384d58;
+    color: white;
+    padding: 100% 5%;
+    border-radius: 5px;
+    border-color: white;
+}
+#bottom-bar {
+    background-color: #1b262c;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#bottom-bar-items {
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#bottom-bar-items .prompt {
+    color: #FFFAFF;
+    align-self: center;
+}
+#reset-button {
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-size: medium;
+    color: white;
+    background-color: #384d58;
+    border-radius: 1px;
+    border-color: #919191;
 }
