--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,21 @@
         <title>Geography Quiz</title>
     </head>
     <body>
+        <div id="top-bar">
+            <div id="top-bar-items">
+                <a class="link-button" href="/Singleplayer">Singleplayer</a>
+                <a class="link-button" href="/Multiplayer">Multiplayer</a>
+                <a class="link-button" href="/Statistics">Statistics</a>
+            </div>
+        </div>
         <div id="map-holder"></div>
+        <div id="bottom-bar">
+            <div id="bottom-bar-items">
+                <h1 class="prompt" id="prompt-prompt">Guess: </h1>
+                <h1 class="prompt" id="prompt-country"></h1>
+                <input id="reset-button" type="button" value="Get Next Question" onclick="resetAndGetNextQuestion()"/>
+            </div>
+        </div>
     </body>
 
     <script src="https://d3js.org/d3-array.v1.min.js"></script>
@@ -12,4 +26,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="static/js/map.js"></script>
+    <script src="static/js/game.js"></script>
 </html>
