Finalized kubernetes deployment for minikube
Still may need to make a different ingress for
an actual kubernetes cluster deployment, but
for now this will work until I figure out what
I want to do for an actual kubernetes cluster

--- a/application/backend/project/static/css/style.css
+++ b/application/backend/project/static/css/style.css
@@ -91,3 +91,8 @@ svg rect {
     border-radius: 1px;
     border-color: #919191;
 }
+#coming-soon h1 {
+    font-size: xx-large;
+    color: white;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+}
