--- a/application/backend/project/static/css/style.css
+++ b/application/backend/project/static/css/style.css
@@ -83,6 +83,17 @@ svg rect {
     color: #FFFAFF;
     align-self: center;
 }
+#bottom-bar-guesses {
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#bottom-bar-guesses .guess {
+    color: #FFFAFF;
+    align-self: center;
+}
 #reset-button {
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: medium;
