--- a/application/backend/project/templates/main.html
+++ b/application/backend/project/templates/main.html
@@ -16,11 +16,13 @@
             <div id="bottom-bar-items">
                 <h1 class="prompt" id="prompt-prompt">Guess: </h1>
                 <h1 class="prompt" id="prompt-country"></h1>
-                <input id="reset-button" type="button" value="Get Next Question" onclick="resetAndGetNextQuestion()"/>
-                <h1 class="prompt" id="prompt-correct">Correct: </h1>
-                <h1 class="prompt" id="prompt-correct-count">0</h1>
-                <h1 class="prompt" id="prompt-total"> Total: </h1>
-                <h1 class="prompt" id="prompt-total-count">0</h1>
+                <input id="reset-button" type="button" value="Next Question" onclick="resetAndGetNextQuestion()"/> 
+            </div>
+            <div id ="bottom-bar-guesses">
+                <h1 class="guess" id="guess-correct">Correct:</h1>
+                <h1 class="guess" id="guess-correct-count">0</h1>
+                <h1 class="guess" id="guess-total">Total:</h1>
+                <h1 class="guess" id="guess-total-count">0</h1>
             </div>
         </div>
     </body>
