--- a/application/backend/project/templates/main.html
+++ b/application/backend/project/templates/main.html
@@ -12,6 +12,9 @@
             </div>
         </div>
         <div id="map-holder"></div>
+        <div class="popup">
+            <span class="popuptext" id="myPopup"></span>
+        </div>
         <div id="bottom-bar">
             <div id="bottom-bar-items">
                 <h1 class="prompt" id="prompt-prompt">Guess: </h1>
