--- a/application/multiplayer/static/css/style.css
+++ b/application/multiplayer/static/css/style.css
@@ -2,10 +2,12 @@ svg {
     width: 100%;
     height: 100%;
 }
+
 svg path:hover {
     fill: #384d58;
     filter: drop-shadow(0px 3px 3px rgba(100, 100, 100, 0.4));
 }
+
 body {
     margin: 0;
     background-color: #0f4c75;
@@ -13,30 +15,38 @@ body {
     font-weight: 200;
     font-size: 17px;
 }
+
 #map-holder {
     width: 100%;
     height: 85%;
 }
+
 svg rect {
     fill: #0f4c75;   /* map background colour */
 }
+
 .country{
     fill: #1b262c;   /* country colour */
     stroke: #919191; /* country border colour */
     stroke-width: 1; /* country border width */
 }
+
 .country-on{
     fill: #4B5358;   /* highlight colour for selected country */
 }
+
 .countryLabel{
     display: none;   /* hide all country labels by default */
 }
+
 .countryName{
     fill: #FFFAFF;   /* country label text colour */
 }
+
 .countryLabelBg{
     fill: #30BCED;   /* country label background colour */
 }
+
 #top-bar {
     background-color: #1b262c;
     width: 100%;
@@ -46,6 +56,7 @@ svg rect {
     align-items: center;
     justify-content: space-around;
 }
+
 #top-bar-items {
     width: 30%;
     display: flex;
@@ -53,6 +64,7 @@ svg rect {
     align-items: center;
     justify-content: center;
 }
+
 #top-bar-items .link-button {
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: medium;
@@ -63,6 +75,12 @@ svg rect {
     border-radius: 5px;
     border-color: white;
 }
+
+.prompt {
+    color: #FFFAFF;
+    align-self: center;
+}
+
 #bottom-bar {
     background-color: #1b262c;
     width: 100%;
@@ -72,17 +90,14 @@ svg rect {
     align-items: center;
     justify-content: space-evenly;
 }
-#bottom-bar-items {
+#bottom-bar-prompt {
     width: 30%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
 }
-.prompt {
-    color: #FFFAFF;
-    align-self: center;
-}
+
 #bottom-bar-guesses {
     width: 30%;
     display: flex;
@@ -90,22 +105,21 @@ svg rect {
     align-items: center;
     justify-content: space-evenly;
 }
-#bottom-bar-guesses .guess {
-    color: #FFFAFF;
-    align-self: center;
+
+#bottom-bar-leaderboard {
+    width: 10%
 }
+
 .input-button {
     visibility: visible;
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: medium;
     color: white;
     background-color: #384d58;
-    border-radius: 1px;
+    border-radius: 5px;
     border-color: #919191;
 }
-#reset-button:disabled {
-    visibility: hidden;
-}
+
 #coming-soon h1 {
     font-size: xx-large;
     color: white;
@@ -134,9 +148,8 @@ svg rect {
     padding: 8px 8px;
     position: absolute;
     z-index: 1;
-    bottom: 100;
-    left: 50%;
-    margin-left: -80px;
+    bottom: 80;
+    margin-left: -90px;
 }
 
 .popup .show {
@@ -167,13 +180,14 @@ svg rect {
 }
 
 #join-room-box{
-    width: 555px;
-    height: 375px;
+    width: 600px;
+    height: 500px;
     background: #1b262c;
-    border: 1px solid #919191;
-    border-radius: 25px;
+    border: 1px solid black;
+    border-radius: 10px;
     position: relative;
     top: 150px; left: 375px;
+    display: inline-block;
 }
 
 #join-room-info {
@@ -181,4 +195,31 @@ svg rect {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    height: 100%;
+}
+
+.prompt-label {
+    font-size: x-large;
+    color: white;
+}
+
+.join-room-input {
+    background-color: #384d58;
+    font-size: large;
+    color: white;
+    border-radius: 5px;
+    border-color: #919191;
+    text-align: center;
+}
+
+#join-error-message {
+    display: none;
+    color: red;
+    font-size: medium;
+}
+
+.color-picker {
+    background-color: #384d58;
+    color: white;
+    font-size: medium;
 }
