--- a/application/backend/project/templates/main.html
+++ b/application/backend/project/templates/main.html
@@ -7,7 +7,7 @@
         <div id="top-bar">
             <div id="top-bar-items">
                 <a class="link-button" href="/Singleplayer">Singleplayer</a>
-                <a class="link-button" href="/Multiplayer">Multiplayer</a>
+                <a class="link-button" href="http://multiplayer.geoquiz.io">Multiplayer</a>
                 <a class="link-button" href="/Statistics">Statistics</a>
             </div>
         </div>
