--- a/application/multiplayer/templates/main.html
+++ b/application/multiplayer/templates/main.html
@@ -33,9 +33,9 @@
         </div>
         <div id="top-bar">
             <div id="top-bar-items">
-                <a class="link-button" href="/Singleplayer">Singleplayer</a>
-                <a class="link-button" href="/Multiplayer">Multiplayer</a>
-                <a class="link-button" href="/Statistics">Statistics</a>
+                <a class="link-button" href="https://www.geoquiz.io/">Singleplayer</a>
+                <a class="link-button" href="/">Multiplayer</a>
+                <a class="link-button" href="https://www.geoquiz.io/Statistics">Statistics</a>
             </div>
         </div>
         <div id="map-holder"></div>
@@ -65,6 +65,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="static/js/multiplayer.js"></script>
-    <script src="static/js/game.js"></script>
+    <script src="static/js/multiplayer-game.js"></script>
     <script src="static/js/map.js"></script>
 </html>
