Finished statistics work

--- a/application/geoquiz/project/templates/main.html
+++ b/application/geoquiz/project/templates/main.html
@@ -11,7 +11,7 @@
                 <a class="link-button" href="/Statistics">Statistics</a>
             </div>
         </div>
-        <div id="map-holder"></div>
+        <div id="map-holder" class="game-map-holder"></div>
         <div class="popup">
             <span class="popuptext" id="myPopup"></span>
         </div>
