--- a/application/geoquiz/project/static/css/style.css
+++ b/application/geoquiz/project/static/css/style.css
@@ -1,4 +1,4 @@
-svg {
+.map-svg {
     width: 100%;
     height: 100%;
 }
@@ -12,10 +12,6 @@ body {
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-weight: 200;
     font-size: 17px;
-}
-#map-holder {
-    width: 100%;
-    height: 85%;
 }
 svg rect {
     fill: #0f4c75;   /* map background colour */
@@ -32,10 +28,13 @@ svg rect {
     display: none;   /* hide all country labels by default */
 }
 .countryName{
-    fill: #FFFAFF;   /* country label text colour */
+    fill: white;   /* country label text colour */
 }
 .countryLabelBg{
-    fill: #30BCED;   /* country label background colour */
+    fill: #1b262c;
+    stroke:#919191;
+    stroke-width:1;
+    opacity:0.8   /* country label background colour */
 }
 #top-bar {
     background-color: #1b262c;
@@ -55,6 +54,7 @@ svg rect {
 }
 #top-bar-items .link-button {
     font-family: 'Yanone Kaffeesatz', sans-serif;
+    height: 100%;
     font-size: medium;
     text-decoration: none;
     background-color: #384d58;
@@ -106,11 +106,6 @@ svg rect {
 #reset-button:disabled {
     visibility: hidden;
 }
-#coming-soon h1 {
-    font-size: xx-large;
-    color: white;
-    font-family: 'Yanone Kaffeesatz', sans-serif;
-}
 
 .popup {
     height: 0%;
@@ -154,4 +149,113 @@ svg rect {
 @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity:1 ;}
+}
+
+.stats-holder {
+    height: 95%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.stats-map-holder {
+    width: 80%;
+    height: 100%;
+}
+
+.game-map-holder {
+    width: 100%;
+    height: 85%;
+}
+
+.side-bar {
+    background-color: #1b262c;
+    height: 100%;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#stat-type-selector {
+    height: 10%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.stats-dividing-line {
+    width: 80%;
+    height: 0%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#stats {
+    height: 85%;
+    width: 85%;
+}
+
+.prompt-label {
+    font-size: x-large;
+    color: white;
+}
+
+#country-picker {
+    background-color: #384d58;
+    color: white;
+    font-size: medium;
+    display: none;
+}
+
+#country-picker-label {
+    display: none;
+}
+
+#color-gradient-label {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#color-gradient {
+    width: 80%;
+    height: 2%;
+    position: relative;
+    bottom: 15;
+    background: linear-gradient(to right, #feeb65 0%, #1a237e 100%);
+}
+
+.stat-line {
+    color: white;
+    font-size: small;
+    text-align: center;
+}
+
+#country-picker-label {
+    text-align: center;
+    font-size: large;
+    padding-bottom: 10;
+}
+
+#country-picker-holder {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#stat-type-picker {
+    width: 60%;
+    display: block;
+    padding-left: 18%;
 }
