--- a/application/geoquiz/project/templates/statistics.html
+++ b/application/geoquiz/project/templates/statistics.html
@@ -6,7 +6,7 @@
     <body>
         <div id="top-bar">
             <div id="top-bar-items">
-                <a class="link-button" href="/Singleplayer">Singleplayer</a>
+                <a class="link-button" href="http://www.geoquiz.io/">Singleplayer</a>
                 <a class="link-button" href="http://multiplayer.geoquiz.io">Multiplayer</a>
                 <a class="link-button" href="/Statistics">Statistics</a>
             </div>
