--- a/application/geoquiz/project/templates/statistics.html
+++ b/application/geoquiz/project/templates/statistics.html
@@ -1,6 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="static/css/style.css">
+        <link rel="stylesheet" type="text/css" href="static/css/geoquiz.css">
+        <link rel="stylesheet" type="text/css" href="static/css/map.css">
+        <link rel="stylesheet" type="text/css" href="static/css/stats.css">
         <title>Statistics</title>
     </head>
     <body>
