Refactored more code. Fixed a disconnect bug in multiplayer.

--- a/application/multiplayer/templates/multiplayer.html
+++ b/application/multiplayer/templates/multiplayer.html
@@ -36,7 +36,7 @@
         <div id="top-bar">
             <div id="top-bar-items">
                 <a class="link-button" href="https://www.geoquiz.io/">Singleplayer</a>
-                <a class="link-button" href="/">Multiplayer</a>
+                <a class="link-button" href="http://multiplayer.geoquiz.io/">Multiplayer</a>
                 <a class="link-button" href="https://www.geoquiz.io/Statistics">Statistics</a>
             </div>
         </div>
