--- a/application/multiplayer/static/css/multiplayer.css
+++ b/application/multiplayer/static/css/multiplayer.css
@@ -1,9 +1,9 @@
 #join-room {
     position: fixed;
-    top: 0;
+    top: 5%;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 95%;
     background: #0f4c75;
     z-index: 1001;
     display: flex;
