--- a/application/geoquiz/project/templates/statistics.html
+++ b/application/geoquiz/project/templates/statistics.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="top-bar">
-            <div id="top-bar-items">
+            <div class="top-bar-items">
                 <a class="link-button" href="http://www.geoquiz.io/">Singleplayer</a>
                 <a class="link-button" href="http://multiplayer.geoquiz.io">Multiplayer</a>
                 <a class="link-button" href="/Statistics">Statistics</a>
